Petites corrections du texte principal par Seb

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -70,9 +70,9 @@ We then show how transverse confinement leads to saturation of the amplitude on 
 \end{figure}
 
 
-To form wrinkled patterns such as the one observed in figure~\ref{fig:dynamics}, ones needs to take advantage of the pH sensitivity of caseins, to control the route to gelation, to fine tune the gel properties and the boundary conditions.
+To form wrinkled patterns such as the one observed in Figure~\ref{fig:dynamics}, ones needs (i) to take advantage of the pH sensitivity of caseins, (ii) to control the route to gelation, (iii) to fine tune the gel properties and the boundary conditions.
 
-The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary Video~\ref{vid:titration} shows the titration of a casein dispersion at 4\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then they flocculate between pH=5.5 to 4 and finally at pH=3 the solution becomes clearer as caseins partially redisperse. The state diagram of caseins as a function of pH is thus related to charge stabilisation. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), casein molecules loose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. Beyond the isoelectric point caseins acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH, see Supplementary Methods. Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH to the isolectric point the free casein fraction drops to almost 0: almost all the casein molecules are aggregated. Further decrease of the pH of the solution leads to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
+The stability of casein dispersions strongly depends on the pH. Supplementary Video~\ref{vid:titration} shows the titration of a casein dispersion at 4\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then they flocculate between pH=5.5 to 4 and finally at pH=3 the solution becomes clearer as caseins partially redisperse. The state diagram of caseins as a function of pH is thus related to charge stabilisation. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), casein molecules loose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. Beyond the isoelectric point caseins acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH, see Supplementary Methods. Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH to the isolectric point the free casein fraction drops to almost 0: almost all the casein molecules are aggregated. Further decrease of the pH of the solution leads to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
 
 %On the Stability of Casein Micelles, Pieter Walstra J. of dairy science 1990
 
@@ -165,23 +165,23 @@ For a typical gel sheet, Supplementary Table~\ref{tab:data}b, the buoyancy after
 
 Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them, see Supplementary Methods about such measurements. As summarised in Supplementary Table~\ref{tab:data} we systematically vary (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacts the gel stiffness, permeability and $\tau$. Finally, the only parameter that we have no control upon is the initial altitude $H$ of the gel before wrinkling that varies randomly. However we are able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here the wavelength associated to the secondary blister is taken as half of that of the primary pattern as shown in Supplementary Figure~\ref{fig:generations}.
 
-Our results are displayed in Figure~\ref{fig:DarcyPoiseuille}. Although they provide the correct order of magnitude for $\lambda$, neither model alone is able to quantitatively reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to miss out on the failure of the Poiseuille model at small wavelengths by adding an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b). Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for the whole $H/H^*$ range.
+Our results are displayed in Figure~\ref{fig:DarcyPoiseuille}. Although they provide the correct order of magnitude for $\lambda$, neither model alone is able to quantitatively reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to miss out on the failure of the Poiseuille model at small wavelengths by adding an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b). Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation provides a much better agreement for the whole $H/H^*$ range.
 
 \section*{Conclusion}
 
-In conclusion we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}.
+In conclusion we have taken advantage of the properties of the casein protein to engineer and study the wrinkling of a porous confined biogel. In particular, we have fine-tuned the interplay between the attraction and the repulsion at the protein level to assemble dense glassy networks that shrink and swell as a result of continuous acidification. Together with carefully controlled adhesion of the gels to the boundaries, this route to form permeable biogels is the key to produce an original cascade of wrinkling patterns. We developed a model that captures the dynamical origin of the constraints exerted on the gel and predicts the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel when the film is far from any wall, Darcy flow of the solvent through the gel when the film is close to a wall. Such a model experiment, because it relies on pH-induced charge stabilisation/destabilisation, should be generalisable to different kinds of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in micro-fingerprinting~\cite{Bae2015} or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013,Fleury2015}.
 
 
 %role of gravity
 
 \section*{Methods summary}
 
-Sodium caseinate (Firmenich) is dissolved in deionised water by stirring for \SI{20}{\minute} at room temperature. The mixing of the caseine dispersion with glucono-$\delta$-lactone (GDL) in powder (Firmenich) marks the beginning of the experiments. We typically have about \SI{10}{\minute} to pipette the dispersion in the slit before gelation starts. Sodium caseinate (Firmenich) is labelled with Dylight~550 NHS ESTER (Thermo Scientific). Excess dye is removed by centrifugation. For confocal microscopy measurements, we add 10\% of fluorescently labelled caseins to the casein/GDL dispersion while it is fluid.
+Sodium caseinate (Firmenich) is dissolved in deionised water by stirring for \SI{20}{\minute} at room temperature. The mixing of the caseine dispersion with glucono-$\delta$-lactone (GDL) in powder (Firmenich) sets the beginning of the experiments. We typically have about \SI{10}{\minute} to pipet the dispersion into the slit before gelation starts. Sodium caseinate (Firmenich) is labelled with Dylight~550 NHS ESTER (Thermo Scientific). Excess dye is removed by centrifugation. For confocal microscopy measurements, we add 10\% of fluorescently labelled caseins to the casein/GDL dispersion while it is fluid.
 
-Home made optical cells are composed of a slide (RS France) and a cover slip (Menzel-Gl\"aser) spaced by parafilm (Parafilm). The optical cell is briefly heated on a hot plate so that the parafilm welds to the slide and the cover slip. Gently applying a pressure on the cover slip while being heated allows us to tune the thickness of the cell from \SIrange{50}{150}{\micro\metre}. The slit is filled with the casein dispersion, immediately sealed using ultraviolet-cured glue (Norland Optical) and placed under the microscope before gelation could take place. To prevent adsorption of caseins to surfaces, microscope slides and cover slips used to make microscopy cells are cleaned and subsequently coated with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) from which a polyacrylamide brush is polymerised from methacrylate groups (Euromedex).
+Home made optical cells are composed of a slide (RS) and a cover slip (Menzel-Gl\"aser) spaced by parafilm (Parafilm). The optical cell is briefly heated on a hot plate so that the parafilm welds to the slide and the cover slip. Gently applying a pressure on the cover slip while being heated allows us to tune the thickness of the cell from \SIrange{50}{150}{\micro\metre}. The slit is filled with the casein dispersion, immediately sealed using ultraviolet-cured glue (Norland Optical) and placed under the microscope before gelation can take place. To prevent adsorption of caseins to surfaces, microscope slides and cover slips used to make microscopy cells are cleaned and subsequently coated with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) from which a polyacrylamide brush is polymerised from methacrylate groups (Euromedex).
 
-3D data are collected on a Zeiss LSM510 confocal microscope, using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling, see Supplementary Material, or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) are used to measure the wavelength of the primary pattern, Supplementary Figures~\ref{fig:generations} and \ref{fig:patterns}. Secondary pattern wavelength is set to half of the primary wavelength, according to Supplementary Figure~\ref{fig:generations}.
-Data shown in Figure~\ref{fig:acidification}a and c are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar). For every gel composition we monitor the gelation by small amplitude oscillations (0.1\%, \SI{1}{\hertz}) and estimate the flexural modulus $B$ from the maximum value of the shear modulus $G^\prime$ as $B=2G^\prime/(1-\nu)$ taking $\nu=0.3$ for the Poisson ratio, typical value for a spongy network~\cite{Greaves2011}.
+3D data are collected on a Zeiss LSM510 confocal microscope using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling, see Supplementary Material, or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) are used to measure the wavelength of the primary pattern, Supplementary Figures~\ref{fig:generations} and \ref{fig:patterns}. The secondary pattern wavelength is taken as half of the primary wavelength, according to Supplementary Figure~\ref{fig:generations}.
+Data shown in Figure~\ref{fig:acidification}a and c are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar). For every gel composition we monitor the gelation by small amplitude oscillations (strain 0.1\%, frequency \SI{1}{\hertz}) and estimate the flexural modulus $B$ from the maximum value of the shear modulus $G^\prime$ as $B=2G^\prime/(1-\nu)$ taking $\nu=0.3$ for the Poisson ratio, a value typical of a spongy network~\cite{Greaves2011}.
 Permeability is measured using a protocol found in \cite{VanDijk1986}, see Supplementary Method and Supplementary Figure~\ref{fig:permeability}. The amount of free casein protein present in the gel during the GDL acidification process is measured by titration and UV-spectrometry (Ocean Optics) according to the protocol found in~\cite{Roefs1986} and detailed in Supplementary Method.
 
 \bibliographystyle{naturemag3}
