Retire les références à une ligne particulière de tab:data Thibaut à sa place

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -53,7 +53,7 @@ Here, we introduce model permeable biogels that produce hierarchical wrinkling a
 
 \begin{figure}
 	\includegraphics{dynamics}%
-	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w in water). (a) Light transmission microscopy. Successive generations of patterns are highlighted in colour to stress the absence of coarsening after formation. (b) 3D reconstruction from fluorescent confocal microscopy, see Supplementary Table~\ref{tab:data}c. Scale bars are \SI{1}{\milli\metre}.}%
+	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w in water). (a) Light transmission microscopy. Successive generations of patterns are highlighted in colour to stress the absence of coarsening after formation. (b) 3D reconstruction from fluorescent confocal microscopy. Scale bars are \SI{1}{\milli\metre}.}%
 	\label{fig:dynamics}%
 \end{figure}
 
@@ -160,7 +160,7 @@ To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*
 
 \section*{Experimental tests}
 
-For a typical gel sheet, Supplementary Table~\ref{tab:data}b, the buoyancy after syn\ae{}resis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ and therefore gravity is dismissed.
+For a typical gel sheet, the buoyancy after syn\ae{}resis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ and therefore gravity is dismissed.
 
 
 Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them, see Supplementary Methods about such measurements. As summarised in Supplementary Table~\ref{tab:data} we systematically vary (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacts the gel stiffness, permeability and $\tau$. Finally, the only parameter that we have no control upon is the initial altitude $H$ of the gel before wrinkling that varies randomly. However we are able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here the wavelength associated to the secondary blister is taken as half of that of the primary pattern as shown in Supplementary Figure~\ref{fig:generations}.
@@ -190,8 +190,8 @@ Permeability is measured using a protocol found in \cite{VanDijk1986}, see Suppl
 \paragraph*{Acknowledgements}
 Confocal experiments were conducted at SFR BioSciences Gerland - Lyon Sud (US8 / UMS3444).
 The authors thank Jos\'e Bico, Arezeki Boudaoud, Cyprien Gay, L. Mahadevan and Olivier Pierre-Louis for theoretical insights at various stages of the research. 
-Precious experimental ideas came from Thibaut Divoux, Catherine Barentin, Denis Bartolo, Elisabeth Bouchaud and Maxime Lefranc.
-Alan Parker at Firmenich provided the casein and GDL; 
+Precious experimental ideas came from Catherine Barentin, Denis Bartolo, Elisabeth Bouchaud and Thibaut Divoux.
+Alan Parker at Firmenich provided the casein and GDL. 
 Special thanks to Madame Biot who made M.A. Biot work accessible through the \href{http://www.olemiss.edu/sciencenet/poronet/}{poronet} website. 
 ML thanks the Region Rhône Alpes and the Programme d'Avenir Lyon - Saint Etienne (PALSE NoGELPo) for postoctoral grant. 
 TG and MN acknowledge funding from the Agence Nationale de la Recherche (ANR-11-PDOC-027). 
