viscous substrate -> viscosity Typos

--- a/fig_plis/cover_letter.tex
+++ b/fig_plis/cover_letter.tex
@@ -50,7 +50,7 @@ Supplementary Video 2, which shows a 3D construction of the gel based on confoca
 
 It is universally recognized that confined thin surfaces may wrinkle due the growth of an excess of material. For example on the biology side a difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts. Localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern. Such patterns can also be triggered by physical parameters such as temperature dilation, swelling or the removal of pre-strain.
 
-So far, laboratory experiments on synthetic systems have focused on free interfaces where gravity dominates over viscous substrates as the wavelength selection mechanism. However, in biology relevant situations for instance, gravity can generally be neglected and cannot be invoked as the driving mechanism for wrinkling. Therefore, benchmark experiments, such as the ones presented in Supplementary Videos 1 and 2, that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line.
+So far, laboratory experiments on synthetic systems have focused on free interfaces where gravity dominates over viscosity as the wavelength selection mechanism. However, in biologically relevant situations for instance, gravity can generally be neglected and cannot be invoked as the driving mechanism for wrinkling. Therefore, benchmark experiments, such as the ones presented in Supplementary Videos 1 and 2, that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line.
 
 From a fundamental perspective, our work unifies concepts from diverse soft matter systems.
 \begin{enumerate}
@@ -65,13 +65,13 @@ From a fundamental perspective, our work unifies concepts from diverse soft matt
 
 
 
-From a practical perspective, such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. Controlled gelation with peculiar boundary conditions introduces a robust method to produce wrinkled surfaces that is distinct from other emerging technologies. We use a combination of complementary techniques ranging from polymer brush grafting, titration, light microscopy, rheology, permeability measurements and confocal microscopy that allow us to fully understand the relations between all levels of hierarchy from the individual proteins to the macroscopic level. Indeed, we directly measure and relate the non monotonous pH response of the proteins to the spontaneous shrinkage and swelling effect of the casein network at the micron level to the wrinkles at the millimetre scale. Playing with the geometry, the gel composition and the viscosity of the solvent, we explore a wide range of physical parameters to check the validity of our models and evidence the first example of wrinkling driven by Darcy flow.
+From a practical perspective, such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different kind of proteins. Controlled gelation with peculiar boundary conditions introduces a robust method to produce wrinkled surfaces that is distinct from other emerging technologies. We use a combination of complementary techniques ranging from polymer brush grafting, titration, light microscopy, rheology, permeability measurements and confocal microscopy that allow us to fully understand the relations between all levels of hierarchy from the individual proteins to the macroscopic level. Indeed, we directly measure and relate the non-monotonic pH response of the proteins to the spontaneous shrinkage and swelling effect of the casein network at the micron level to the wrinkles at the millimetre scale. Playing with the geometry, the gel composition and the viscosity of the solvent, we explore a wide range of physical parameters to check the validity of our models and evidence the first example of wrinkling driven by Darcy flow.
 
 
-The impact of our work extends beyond soft-matter physics. For instance, it illustrates daily life problems such as wrinkles encountered while putting up wall paper: water swells the paper and air infiltrates through the paper and produces Darcy blisters. It could also set a reference for potential applications. For example since the wrinkling pattern is unique and unreproducible it could be used as a safe key for identification. Moreover, the nested nature of the patterns could be use in optical devices such as diffraction gratings or Fresnel lenses. Finally, our experiment paves the way to explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues. Indeed during the morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.
+The impact of our work extends beyond soft-matter physics. For instance, it illustrates daily life problems such as wrinkles encountered while putting up wall paper: water swells the paper and air infiltrates through the paper and produces Darcy blisters. Our results could also set a reference for potential applications. For example since the wrinkling pattern is unique and unreproducible it could be used as a safe key for identification. Moreover, the nested nature of the patterns could be used in optical devices such as diffraction gratings or Fresnel lenses. Finally, our experiments pave the way for exploring the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues. Indeed during morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.
 
 
-For all these reasons we believe that our manuscript is suitable for a publication in an interdisciplinary journal such as Nature Materials. With this manuscript we are including 7 Supplementary Videos, which have been mailed to your editorial office. As possible reviewers we suggest: L. Mahadevan (Harvard, USA), N. Menon (Amherst, USA), Benoît Roman (ESPCI, France), Enrique Cerda (Univ. Santiago-Chile, Chile), Mokhtar-Adda-Bedia (ENS Paris, France), Dominic Vella (Oxford, UK), Eric Lauga (Cambridge, UK).
+For all these reasons we believe that our manuscript is suitable for a publication in an interdisciplinary journal such as Nature Materials. With this manuscript we are including 7 Supplementary Videos, which have been mailed to your editorial office. As potential reviewers we wish to suggest: L. Mahadevan (Harvard, USA), N. Menon (Amherst, USA), Benoît Roman (ESPCI, France), Enrique Cerda (Univ. Santiago-Chile, Chile), Mokhtar-Adda-Bedia (ENS Paris, France), Dominic Vella (Oxford, UK), Eric Lauga (Cambridge, UK).
 
  
 
