--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -1,5 +1,4 @@
-\documentclass[twocolumn,superscriptaddress,showpacs,preprintnumbers,
-amsmath,amssymb,prl]{revtex4-1}
+\documentclass[twocolumn,superscriptaddress,showpacs,preprintnumbers,amsmath,amssymb,prl]{revtex4-1}
 \usepackage[utf8]{inputenc}
 
 \usepackage{graphicx} 
