--- a/fig_plis/supplementary_plis.tex
+++ b/fig_plis/supplementary_plis.tex
@@ -48,7 +48,7 @@ where $A_{280}$ is the absorption peak at \SI{280}{\nano\metre} due to aromatic 
 
 Above the isoelectric point, the homogeneous acidification by GDL continuously creates very small protein aggregates that are difficult to centrifuge. Such suspensions are too turbid and too rapidly evolving to reliably measure $x_\text{free}$.
 
-\section*{Microstructure measurement}
+\section*{Microstructure measurements}
 
 \begin{figure}
 	\includegraphics{nonmonotonic}%
@@ -102,7 +102,7 @@ We first de-noise each plane by a short-range Gaussian blur ($\sigma=\SI{2}{px}\
 
 From these data, we obtain for each stack the volume and thickness of the gel phase, area and peak-to-peak amplitude of the mid surface. Velocity is obtained by time differentiation. Once the instability has saturated on the top and bottom walls of the cell, peaks in the histograms of $z_\text{top}$ and $z_\text{bottom}$ yield the measure of the positions of both walls, thus of the cell thickness $e$ and retrospectively of $H_1$ and $H_2$.
 
-\section*{Characteristic time measurement}
+\section*{Characteristic time measurements}
 \begin{figure}
 	\includegraphics{growth}
 	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ averaged over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scales. The black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the longitudinal size of the blister evolves in this regime. The thick black curve is the profile at much longer times and is at lower altitude due to swelling. Note that the blister foot, highlighted by the orange vertical line, has not moved since contact.}
@@ -297,7 +297,7 @@ i & 4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 
 \label{tab:data}
 \end{table*}
 
-\section*{Wavelength measurement}
+\section*{Wavelength measurements}
 
 \begin{figure}
 	\includegraphics{generations}%
@@ -336,9 +336,9 @@ Figure~\ref{fig:generations} shows Fourier spectra of binarised altitudes at dif
 
 \item\label{vid:nostick63} Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when the top wall is coated with acrylamide brushes and the bottom wall remains sticky. 10\% of the proteins are fluorescently labelled. The total duration of the Video is \SI{147}{\minute}. The scale bar is \SI{10}{\micro\metre}.
 
-\item\label{vid:cutDarcy} Confocal microscopy $(x,z)$ cut of the evolution of the gel sheet deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}a. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies close to the bottom wall, $H<H^*$. Darcy mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{145}{\minute}.
+\item\label{vid:cutDarcy} Confocal microscopy $(x,z)$ cut of the evolution of the gel film deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}a. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies close to the bottom wall, $H<H^*$. Darcy mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{145}{\minute}.
 
-\item\label{vid:cutPoiseuille} Confocal microscopy $(x,z)$ cut of the evolution of the gel sheet deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}c. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies far from either top or bottom wall, $H>H^*$. Poiseuille mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{181}{\minute}.
+\item\label{vid:cutPoiseuille} Confocal microscopy $(x,z)$ cut of the evolution of the gel film deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}c. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies far from either top or bottom wall, $H>H^*$. Poiseuille mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{181}{\minute}.
 
 \end{enumerate}
 
